==> fanjingxian/Template1/bsp/oled/OLED.c <==
#include "OLED.h"
#include "stdlib.h"
#include "oledfont.h"

void OLED_WR_Byte(u8 dat, u8 mode)
{
#ifdef IIC_Mode
    /* 等待I2C总线空闲 */
    while (i2c_flag_get(I2CX, I2C_FLAG_I2CBSY))
        ;
    /* 发送起始信号到I2C总线 */
    i2c_start_on_bus(I2CX);
    /* 等待发送起始信号成功标志位为1 */
    while (!i2c_flag_get(I2CX, I2C_FLAG_SBSEND))
        ;
    /* 发送从机地址到I2C总线 */
    i2c_master_addressing(I2CX, I2CX_SLAVE_ADDRESS7, I2C_TRANSMITTER);
    /* 等待发送从机地址成功标志位为1 */
    while (!i2c_flag_get(I2CX, I2C_FLAG_ADDSEND))
        ;
    /* 清除发送从机地址成功标志位 */
    i2c_flag_clear(I2CX, I2C_FLAG_ADDSEND);
    /* 等待传输数据缓冲区为空 */
    while (SET != i2c_flag_get(I2CX, I2C_FLAG_TBE))
        ;
    /* 发送寄存器地址（发送命令） */
    if (mode)
    {
        i2c_data_transmit(I2CX, 0x40);
    }
    else
    {
        i2c_data_transmit(I2CX, 0x00);
    }
    /* 等待字节传输完成位设置完成 */
    while (!i2c_flag_get(I2CX, I2C_FLAG_BTC))
        ;
    /* 发送数据 */
    i2c_data_transmit(I2CX, dat);
    /* 等待字节传输完成位设置完成 */
    while (!i2c_flag_get(I2CX, I2C_FLAG_BTC))
        ;
    /* 向I2C总线发送停止信号 */
    i2c_stop_on_bus(I2CX);
    /* 等待直到停止信号发送完成  */
    while (I2C_CTL0(I2CX) & 0x0200)
        ;
#else
    I2C_Start();
    Send_Byte(0x78);
    I2C_WaitAck();
    if (mode)
    {
        Send_Byte(0x40);
    }
    else
    {
        Send_Byte(0x00);
    }
    I2C_WaitAck();
    Send_Byte(dat);
    I2C_WaitAck();
    I2C_Stop();
#endif
}

void OLED_Refresh(void)
{
#ifdef IIC_Mode
    u8 i, n;
    for (i = 0; i < 8; i++)
    {
        OLED_WR_Byte(0xb0 + i, OLED_CMD); // 设置行起始地址
        OLED_WR_Byte(0x00, OLED_CMD);     // 设置低列起始地址
        OLED_WR_Byte(0x10, OLED_CMD);     // 设置高列起始地址
        /* 等待I2C总线空闲 */
        while (i2c_flag_get(I2CX, I2C_FLAG_I2CBSY))
            ;
        /* 发送起始信号到I2C总线 */
        i2c_start_on_bus(I2CX);
        /* 等待发送起始信号成功标志位为1 */
        while (!i2c_flag_get(I2CX, I2C_FLAG_SBSEND))
            ;
        /* 发送从机地址到I2C总线 */
        i2c_master_addressing(I2CX, I2CX_SLAVE_ADDRESS7, I2C_TRANSMITTER);
        /* 等待发送从机地址成功标志位为1 */
        while (!i2c_flag_get(I2CX, I2C_FLAG_ADDSEND))
            ;
        /* 清除发送从机地址成功标志位 */
        i2c_flag_clear(I2CX, I2C_FLAG_ADDSEND);
        /* 等待传输数据缓冲区为空 */
        while (SET != i2c_flag_get(I2CX, I2C_FLAG_TBE))
            ;
        /* 发送寄存器地址（发送命令） */
        i2c_data_transmit(I2CX, 0x40);
        /* 等待字节传输完成位设置完成 */
        while (!i2c_flag_get(I2CX, I2C_FLAG_BTC))
            ;
        // 发送全部显存数据
        for (n = 0; n < 128; n++)
        {
            i2c_data_transmit(I2CX, OLED_GRAM[n][i]);
            while (!i2c_flag_get(I2CX, I2C_FLAG_BTC))
                ;
        }
        /* 向I2C总线发送停止信号 */
        i2c_stop_on_bus(I2CX);
        /* 等待直到停止信号发送完成  */
        while (I2C_CTL0(I2CX) & 0x0200)
            ;
    }
#else
    u8 i, n;
    for (i = 0; i < 8; i++)
    {
        OLED_WR_Byte(0xb0 + i, OLED_CMD); // 设置行起始地址
        OLED_WR_Byte(0x00, OLED_CMD);     // 设置低列起始地址
        OLED_WR_Byte(0x10, OLED_CMD);     // 设置高列起始地址
        I2C_Start();
        Send_Byte(0x78);
        I2C_WaitAck();
        Send_Byte(0x40);
        I2C_WaitAck();
        for (n = 0; n < 128; n++)
        {
            Send_Byte(OLED_GRAM[n][i]);
            I2C_WaitAck();
        }
        I2C_Stop();
    }
#endif
}

void OLED_Init(void)
{
#ifdef IIC_Mode
    /* 使能引脚时钟 */
    rcu_periph_clock_enable(RCU_LCD_SCL);
    rcu_periph_clock_enable(RCU_LCD_SDA);

    /* 配置SCL引脚复用IIC功能 */
    gpio_af_set(PORT_LCD_SCL, GPIO_AF_4, GPIO_LCD_SCL);
    /* 配置SDA引脚复用IIC功能 */
    gpio_af_set(PORT_LCD_SDA, GPIO_AF_4, GPIO_LCD_SDA);

    /* 配置SCL引脚 */
    gpio_mode_set(PORT_LCD_SCL, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_LCD_SCL);
    gpio_output_options_set(PORT_LCD_SCL, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ,
                            GPIO_LCD_SCL);
    /* 配置SDA引脚 */
    gpio_mode_set(PORT_LCD_SDA, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_LCD_SDA);
    gpio_output_options_set(PORT_LCD_SDA, GPIO_OTYPE_OD, GPIO_OSPEED_50MHZ,
                            GPIO_LCD_SDA);

    /* 使能IIC时钟 */
    rcu_periph_clock_enable(RCU_I2CX);
    /* 清除IIC原先配置 */
    i2c_deinit(I2CX);
    /* 配置IIC时钟 */
    i2c_clock_config(I2CX, I2C_SPEED, I2C_DTCY_2);
    /* 配置I2C地址 */
    i2c_mode_addr_config(I2CX, I2C_I2CMODE_ENABLE, I2C_ADDFORMAT_7BITS,
                         I2CX_SLAVE_ADDRESS7);
    /* 使能I2C */
    i2c_enable(I2CX);
    /* 使能应答功能 */
    i2c_ack_config(I2CX, I2C_ACK_ENABLE);

    //        OLED_RES_Clr();
    delay_ms(200);
    //        OLED_RES_Set();

    OLED_WR_Byte(0xAE, OLED_CMD); //--turn off oled panel
    OLED_WR_Byte(0x00, OLED_CMD); //---set low column address
    OLED_WR_Byte(0x10, OLED_CMD); //---set high column address
    OLED_WR_Byte(0x40, OLED_CMD); //--set start line address  Set Mapping RAM
                                  //Display Start Line (0x00~0x3F)
    OLED_WR_Byte(0x81, OLED_CMD); //--set contrast control register
    OLED_WR_Byte(0xCF, OLED_CMD); // Set SEG Output Current Brightness
    OLED_WR_Byte(0xA1,
                 OLED_CMD); //--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
    OLED_WR_Byte(
        0xC8, OLED_CMD); // Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
    OLED_WR_Byte(0xA6, OLED_CMD); //--set normal display
    OLED_WR_Byte(0xA8, OLED_CMD); //--set multiplex ratio(1 to 64)
    OLED_WR_Byte(0x3f, OLED_CMD); //--1/64 duty
    OLED_WR_Byte(0xD3, OLED_CMD); //-set display offset        Shift Mapping RAM
                                  //Counter (0x00~0x3F)
    OLED_WR_Byte(0x00, OLED_CMD); //-not offset
    OLED_WR_Byte(
        0xd5, OLED_CMD); //--set display clock divide ratio/oscillator frequency
    OLED_WR_Byte(0x80,
                 OLED_CMD); //--set divide ratio, Set Clock as 100 Frames/Sec
    OLED_WR_Byte(0xD9, OLED_CMD); //--set pre-charge period
    OLED_WR_Byte(
        0xF1, OLED_CMD); // Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    OLED_WR_Byte(0xDA, OLED_CMD); //--set com pins hardware configuration
    OLED_WR_Byte(0x12, OLED_CMD);
    OLED_WR_Byte(0xDB, OLED_CMD); //--set vcomh
    OLED_WR_Byte(0x40, OLED_CMD); // Set VCOM Deselect Level
    OLED_WR_Byte(0x20, OLED_CMD); //-Set Page Addressing Mode (0x00/0x01/0x02)
    OLED_WR_Byte(0x02, OLED_CMD); //
    OLED_WR_Byte(0x8D, OLED_CMD); //--set Charge Pump enable/disable
    OLED_WR_Byte(0x14, OLED_CMD); //--set(0x10) disable
    OLED_WR_Byte(0xA4, OLED_CMD); // Disable Entire Display On (0xa4/0xa5)
    OLED_WR_Byte(0xA6, OLED_CMD); // Disable Inverse Display On (0xa6/a7)
    OLED_Clear();
    OLED_WR_Byte(0xAF, OLED_CMD);
		OLED_Clear();
#else
    /* 使能时钟 */
    rcu_periph_clock_enable(RCU_LCD_SCL);
    rcu_periph_clock_enable(RCU_LCD_SDA);
    /* 配置SCL */
    gpio_mode_set(PORT_LCD_SCL, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP,
                  GPIO_LCD_SCL);
    gpio_output_options_set(PORT_LCD_SCL, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ,
                            GPIO_LCD_SCL);
    gpio_bit_write(PORT_LCD_SCL, GPIO_LCD_SCL, SET);

    /* 配置SDA */
    gpio_mode_set(PORT_LCD_SDA, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP,
                  GPIO_LCD_SDA);
    gpio_output_options_set(PORT_LCD_SDA, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ,
                            GPIO_LCD_SDA);
    gpio_bit_write(PORT_LCD_SDA, GPIO_LCD_SDA, SET);

    //        OLED_RES_Clr();
    delay_ms(200);
    //        OLED_RES_Set();

    OLED_WR_Byte(0xAE, OLED_CMD); //--turn off oled panel
    OLED_WR_Byte(0x00, OLED_CMD); //---set low column address
    OLED_WR_Byte(0x10, OLED_CMD); //---set high column address
    OLED_WR_Byte(0x40, OLED_CMD); //--set start line address  Set Mapping RAM
                                  //Display Start Line (0x00~0x3F)
    OLED_WR_Byte(0x81, OLED_CMD); //--set contrast control register
    OLED_WR_Byte(0xCF, OLED_CMD); // Set SEG Output Current Brightness
    OLED_WR_Byte(0xA1,
                 OLED_CMD); //--Set SEG/Column Mapping     0xa0左右反置 0xa1正常
    OLED_WR_Byte(
        0xC8, OLED_CMD); // Set COM/Row Scan Direction   0xc0上下反置 0xc8正常
    OLED_WR_Byte(0xA6, OLED_CMD); //--set normal display
    OLED_WR_Byte(0xA8, OLED_CMD); //--set multiplex ratio(1 to 64)
    OLED_WR_Byte(0x3f, OLED_CMD); //--1/64 duty
    OLED_WR_Byte(0xD3, OLED_CMD); //-set display offset        Shift Mapping RAM
                                  //Counter (0x00~0x3F)
    OLED_WR_Byte(0x00, OLED_CMD); //-not offset
    OLED_WR_Byte(
        0xd5, OLED_CMD); //--set display clock divide ratio/oscillator frequency
    OLED_WR_Byte(0x80,
                 OLED_CMD); //--set divide ratio, Set Clock as 100 Frames/Sec
    OLED_WR_Byte(0xD9, OLED_CMD); //--set pre-charge period
    OLED_WR_Byte(
        0xF1, OLED_CMD); // Set Pre-Charge as 15 Clocks & Discharge as 1 Clock
    OLED_WR_Byte(0xDA, OLED_CMD); //--set com pins hardware configuration
    OLED_WR_Byte(0x12, OLED_CMD);
    OLED_WR_Byte(0xDB, OLED_CMD); //--set vcomh
    OLED_WR_Byte(0x40, OLED_CMD); // Set VCOM Deselect Level
    OLED_WR_Byte(0x20, OLED_CMD); //-Set Page Addressing Mode (0x00/0x01/0x02)
    OLED_WR_Byte(0x02, OLED_CMD); //
    OLED_WR_Byte(0x8D, OLED_CMD); //--set Charge Pump enable/disable
    OLED_WR_Byte(0x14, OLED_CMD); //--set(0x10) disable
    OLED_WR_Byte(0xA4, OLED_CMD); // Disable Entire Display On (0xa4/0xa5)
    OLED_WR_Byte(0xA6, OLED_CMD); // Disable Inverse Display On (0xa6/a7)
    OLED_Clear();
    OLED_WR_Byte(0xAF, OLED_CMD);
		OLED_Clear();
#endif
}
